.deploy/rest-events/assets/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: assets-app
spec:
  revisionHistoryLimit: 0
  replicas: 1
  selector:
    matchLabels:
      app: assets-app
  template:
    metadata:
      labels:
        app: assets-app
    spec:
      imagePullSecrets:
        - name: ghcr
      volumes:
        - name: assets-pv-storage
          persistentVolumeClaim:
            claimName: assets-pv-claim
      containers:
        - name: assets-re-middleware
          image: ghcr.io/manuelottlik/htp-re-middleware
          imagePullPolicy: Always
          ports:
           - containerPort: 8088
          resources:
            limits:
              memory: 64Mi
              cpu: 50m
        - name: assets-app
          image: ghcr.io/manuelottlik/htp-rest-events-assets
          imagePullPolicy: Always
          ports:
           - containerPort: 8080
           - containerPort: 8081
          resources:
            limits:
              memory: 64Mi
              cpu: 50m
          volumeMounts:
            - name: assets-pv-storage
              mountPath: /etc/data/db
